--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,11 @@ input {
 }
 
 .react-aria-ModalOverlay {
-	display: grid;
-	place-items: center;
+	/* TODO: キーボードとモーダルが被る問題 */
+	/* display: grid;
+	place-items: center; */
+	display: flex;
+	justify-content: center;
 	background-color: rgba(0, 0, 0, 0.3);
 	position: fixed;
 	z-index: 20;
